<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_green_light">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_margin="12dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent">

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/ip_address"/>

                        <EditText
                            android:id="@+id/editText_IPAddress"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="192.168.4.1"/>

                    </LinearLayout>

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/port"/>

                        <EditText
                            android:id="@+id/editText_Port"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="333"/>

                    </LinearLayout>

                </LinearLayout>

            <Button
                android:id="@+id/button_Connect"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/connect"/>

            </LinearLayout>

        <TextView
            android:id="@+id/textView_ConnectResult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

                <Button
                    android:layout_margin="12dp"
                    android:id="@+id/button_LEDOn"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/led_on"/>

                <Button
                    android:layout_margin="12dp"
                    android:id="@+id/button_LEDOff"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/led_off"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:layout_margin="12dp"
                android:id="@+id/button_AirOn"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/air_on"/>

            <Button
                android:layout_margin="12dp"
                android:id="@+id/button_AirOff"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/air_off"/>

        </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_margin="12dp"
            android:id="@+id/button_MusOn"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/music_on"/>

        <Button
            android:layout_margin="12dp"
            android:id="@+id/button_MusOff"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/music_off"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_margin="12dp"
            android:id="@+id/button_temperature"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/temperature"/>

        <Button
            android:layout_margin="12dp"
            android:id="@+id/button_humidity"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/humidity"/>

    </LinearLayout>

    </LinearLayout>